WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235833
AX: Isolated tree objects don't update their AXPropertyName::ElementRect or AXPropertyName::BoundingBoxRect in response to dynamic page changes
https://bugs.webkit.org/show_bug.cgi?id=235833
Summary
AX: Isolated tree objects don't update their AXPropertyName::ElementRect or A...
Tyler Wilcock
Reported
2022-01-28 13:24:24 PST
This means we'll report the wrong position / size of the object when queried by AX clients.
Attachments
Patch
(9.27 KB, patch)
2022-01-28 13:41 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(9.28 KB, patch)
2022-01-28 20:58 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-01-28 13:24:34 PST
<
rdar://problem/88201326
>
Tyler Wilcock
Comment 2
2022-01-28 13:41:18 PST
Created
attachment 450274
[details]
Patch
Tyler Wilcock
Comment 3
2022-01-28 20:58:20 PST
Created
attachment 450306
[details]
Patch
EWS
Comment 4
2022-01-29 08:44:30 PST
Committed
r288791
(
246568@main
): <
https://commits.webkit.org/246568@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 450306
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug